testsuites/LLT/compiler/Diagnose/lex_test/lex_expected_identifier/case2.expect.out
error: expected identifier, found '`'
  ==> case2.cj:14:3:
   | 
14 |     `````
   |      ^ expected identifier
   | 

error: expected identifier, found '`'
  ==> case2.cj:14:5:
   | 
14 |     `````
   |        ^ expected identifier
   | 

error: expected identifier, found 'new line character'
  ==> case2.cj:14:7:
   | 
14 |     `````
   |          ^ expected identifier
   | 

error: expected identifier, found 'new line character'
  ==> case2.cj:15:3:
   | 
15 |     `
   |      ^ expected identifier
   | 

4 errors generated, 4 errors printed.
